// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`limina basic usage 1`] = `
Object {
  "@media (max-width: 540px)": Object {
    "width": "100vw",
  },
  "@media (min-width: 1280px)": Object {
    "width": "90.625vw",
  },
  "@media (min-width: 541px) and (max-width: 1279px)": Object {
    "width": "calc(83.78378vw + 87.56757px)",
  },
}
`;

exports[`limina styles object with array of BreakpointValues three breakpoints works with a multiple property-value pairs 1`] = `
Object {
  "@media (max-width: 540px)": Object {
    "fontSize": "5.92593vw",
    "width": "100vw",
  },
  "@media (min-width: 1280px)": Object {
    "fontSize": "5vw",
    "width": "90.625vw",
  },
  "@media (min-width: 541px) and (max-width: 853px)": Object {
    "fontSize": "calc(5.09554vw + 4.48408px)",
    "width": "calc(72.61146vw + 147.89809px)",
  },
  "@media (min-width: 854px)": Object {
    "fontSize": "5.62061vw",
    "width": "89.92974vw",
  },
  "@media (min-width: 855px) and (max-width: 1279px)": Object {
    "fontSize": "calc(3.75587vw + 15.92488px)",
    "width": "calc(92.01878vw + -17.84038px)",
  },
}
`;

exports[`limina styles object with array of BreakpointValues three breakpoints works with a single property-value pair 1`] = `
Object {
  "@media (max-width: 540px)": Object {
    "width": "100vw",
  },
  "@media (min-width: 1280px)": Object {
    "width": "90.625vw",
  },
  "@media (min-width: 541px) and (max-width: 853px)": Object {
    "width": "calc(72.61146vw + 147.89809px)",
  },
  "@media (min-width: 854px)": Object {
    "width": "89.92974vw",
  },
  "@media (min-width: 855px) and (max-width: 1279px)": Object {
    "width": "calc(92.01878vw + -17.84038px)",
  },
}
`;

exports[`limina styles object with array of BreakpointValues two breakpoints works with a single property-value pair 1`] = `
Object {
  "@media (max-width: 540px)": Object {
    "width": "100vw",
  },
  "@media (min-width: 1280px)": Object {
    "width": "90.625vw",
  },
  "@media (min-width: 541px) and (max-width: 1279px)": Object {
    "width": "calc(83.78378vw + 87.56757px)",
  },
}
`;
